--- a/velada_del_ano_2/menu/video.css
+++ b/velada_del_ano_2/menu/video.css
@@ -1,14 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Bangers|Open+Sans+Condensed:300&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
     padding:0;
-    list-style: none;
-    text-decoration: none;
     }
     
  body{
-    overflow: hidden;
     color:#ffffff; 
     background-color: #DFDBE5;
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%236441a5' fill-opacity='1'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -77,7 +73,7 @@
      display: none;
  }
  /* parte abajo */
-/* .parte-abajo{
+.parte-abajo{
     background: #2f3640;
     color: #616161;
     font-size: 20px;
@@ -106,81 +102,21 @@
     padding: 20px 0;
     text-align: center;
     padding-bottom: 20px;
-} */
-
-#caja button{
-    display: block;
-    position: relative;
-}
-#pcompleta i{
-    visibility: visible;
-    position: absolute;
-    margin: 0;
-    bottom:-0.3em;
-    right:-15.1em;
-    color:white;
-    font-size: 2.8rem;
-    padding:1em 1.6em;
-    cursor: pointer;
-}
-#preducir i{
-    visibility: hidden;
-    position: absolute;
-    margin: 0;
-    bottom:-0.3em;
-    color:white;
-    font-size: 2.8rem;
-    padding:1em 1.6em;
-    cursor: pointer;
 }
 
-#caja{
-    position:relative;
-    margin: 5vh auto;
-    width: 626px;
-    height: 451px;
-    -moz-box-shadow: 0px 0px 20px #13df01; 
-    -webkit-box-shadow: 0px 0px 20px #00ff2a; 
+#video1{
+    border-radius: 10px;
+    border:2px solid #01e1ff;
+    -moz-box-shadow: 0px 0px 20px #01e1ff; 
+    -webkit-box-shadow: 0px 0px 20px #01e1ff;   
     box-shadow: 0px 0px 20px #ff00ea;
-    border-radius: 10px;
-    padding: 0px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    height: 722px;
+    width: 1280px;
 }
-
-#caja:-webkit-full-screen {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-    border-radius: 10px;
-}
-
-#caja:-moz-full-screen {
-	margin: 0;
-    border-radius: 10px;
-}
-
-#caja:-ms-fullscreen {
-	margin: 0;
-    border-radius: 10px;
-}
-
-#caja:fullscreen { 
-	margin: 0;
-    border-radius: 10px;
-}
-
-#canvas{
-    width: 100%;
-    height: 100%;
-    /* background: #e600ff; */
-   /*  background: url(../img/boxing.jfif) no-repeat 0; */
-    background-size: cover;      
-    /* font-family: 'Open Sans Condensed', sans-serif; */
-    background-position: center;
-    color: #ffffff;
-    border-radius: 10px;
-    font-family: 'Permanent Marker', cursive;
-}
-
 
 @media (max-width:2000px) and (min-width:1670px){
 }
@@ -229,9 +165,9 @@
         margin-right: 50px;
     }
 
-   /*  .parte-abajo .container-pa{
+    .parte-abajo .container-pa{
         grid-template-columns: repeat(2,1fr);
-    } */
+    }
 }
 
 @media (max-width:500px){
@@ -262,7 +198,7 @@
     .nav-main ul.nav-menu-right{
         display: none;;
     }
-   /*  .parte-abajo .container-pa{
+    .parte-abajo .container-pa{
         grid-template-columns: 1fr;
-    } */
+    }
 }
